# notion-tool

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
src/notion_kanban_cli/: __init__.py  cli.py  client.py  config.py  schema.py  transform.py
tests/: test_client.py
