[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-kanban-cli"
version = "0.1.0"
description = "CLI tool for interacting with Notion kanban boards"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
notion-tool = "notion_kanban_cli.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
notion_kanban_cli = ["py.typed"]
